# easytensor

./: .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  skaffold.yaml
babysitter/: Dockerfile  pytorch_start.sh  run.sh  tensorflow_start.sh
backend/: Dockerfile  Dockerfile.migrations  Makefile  Pipfile  check_latest_migration.py  dev_fixtures.json  fixtures.json  migrate_app.sh  path_utils.py  pyproject.toml  requirements.txt  setup_fixtures.py  start_app.sh  test_clinet.py  wait-for-django-db.sh  wait-for-migrations.sh
backend/backend/: confirm_email_view.py  ds_connector.py  settings.py  test.py  urls.py
backend/backend/templates/account/email/: README.md  email_confirmation_signup_message.txt  email_confirmation_signup_subject.txt
backend/payments/: models.py  serializers.py  util.py  views.py  webhook_handlers.py
backend/payments/migrations/: 0001_initial.py
backend/tests/: migration_check_test.py
backend/uploads/: errors.py  google_signing_helpers.py  models.py  views.py
backend/uploads/migrations/: 0001_initial.py  0002_queryaccesstoken.py  0003_model_framework.py  0004_add_model_details.py  0005_make_tags_optional.py  0006_auto_20210407_1410.py  LATEST_MIGRATION.txt
config/: generate_dev_secrets.sh  generate_prod_secrets.sh  generate_prod_values  generate_sealed_secrets.sh  generate_secrets.sh  gsutil-cors.json
controller/: Dockerfile  config.py  run.py  test.py
docker/: dev.Dockerfile  terraform.Dockerfile  tusd.Dockerfile
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json
k8s/: argocd-ingress.yaml
(+122 files in other folders)
