[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kamal Kamalaldin <kamal.aldin.94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1"
djangorestframework = "^3.7"
django-cors-headers = "^3.7"
google-cloud-storage = "^1.31"
djangorestframework-simplejwt = "^4.6"
dj-rest-auth = {extras = ["with_social"], version = "^1.1"}
psycopg2 = "^2.8"
drf-yasg = "^1.20"
stripe = "^2.56"
pymongo = "^3.5"
dnspython = "^2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
